clickSelects, then can we select all of the corresponding geoms? This
would require rewriting a substantial amount of JS code, so let's just
ignore this for the time being.

specify id or key variable for transitions? In the current set of
examples, using keys has proven un-necessary. So let's just ignore
this for now.  http://bost.ocks.org/mike/constancy/

Figure out when two csv files are the same and if so only write one of
them?

2013.11.22

Warn when 0-sized geoms are produced, since they will be invisible.

2013.11.19

draw colored, sized "a" in legend for geom_text.

geom_text(aes(size)) is resized using e.g. <text font-size="10">

2013.11.15

Bugfix: filter NaN before passing data to lineThing to avoid hiding an
entire line if only one element is NA.

2013.10.23

Include 1 animint in a knitr Rmd document when processed in the same
directory.

Generate documentation example web site.

Bugfix for geom_point(colour=constant).

2013.10.15

Hide only y axis and not x axis if axis.text.y=element_blank(), etc.

2013.10.4

Bugfixes for geom_ribbon(aes(fill=variable)) and
geom_text(aes(color=variable)).

2013.9.26

Update R/JS comments from emails to Susan.

gg2animint examples are animated and interactive.

2013.8.29
Implementation of geom_hex with relevant examples and documentation.

2013.8.15
Updated package requirements (MASS, reshape2, maps)
Updated documentation to include warnings about using google chrome with animint


2013.7.29
Fix for significant digits issue with clickSelects - fixed by exporting 
as character into JSON file, then importing and converting to numerals.

Axes can now be removed for maps

2013.7.26

bugfix for animations: before, we assumed that the animation variable
takes values in 1..n, but now this is treated properly by looking at
the actual values.

make_text for quick labels.

make_*(data, ...)

WARNING when stat_bin is used to put several clickSelects or
showSelected values in the same bin!
